<resources>
    <string name="app_name" translatable="false">Bareilly</string>
    <string name="please_select_your_language_en" translatable="false">Please select your language</string>
    <string name="please_select_your_language_hi" translatable="false">कृपया अपनी भाषा चुनें</string>
    <string name="pick_a_theme">Pick a theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="btn_continue">Continue</string>
    <string name="login">Login</string>
    <string name="enter_your_number">Enter your mobile number</string>
    <string name="we_will_send_an_otp_to_this_number_to_verify">We will send an otp to this number to verify</string>
    <string name="enter_a_valid_mobile_number">Please enter a valid mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_in">Resend in</string>
    <string name="secs">sec(s)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_sent_successfuly">OTP sent successfully</string>
    <string name="enter_a_valid_otp">Enter a valid OTP</string>
    <string name="edit_profile">Edit profile</string>
    <string name="complete_profile">Complete your profile</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="about_you">About you</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="other">Others</string>
    <string name="save">Save</string>
    <string name="username_helper_text">Help people discover your account by choosing a username you\'re known by. You can change this later but it uniques to an account</string>
    <string name="username_is_required_to_proceed">Username is required to proceed</string>
    <string name="home">Home</string>
    <string name="queries">Queries</string>
    <string name="profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="bareilly_against_corona">Bareilly against corona</string>
    <string name="total_cases">Total cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="source_semicolon">"Source: "</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="top_news_today">Top news today</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, @shivamvk consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="select_type">Select type</string>
    <string name="create_post">Create post</string>
    <string name="post">Post</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="trending_tags">Trending tags</string>
    <string name="creating_post">Creating post...</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>
    <string name="current_language">Current language :</string>
    <string name="current_theme">Current theme :</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="english">English</string>
    <string name="light">Light</string>
    <string name="hindi">हिन्दी</string>
    <string name="dark">Dark</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="open_source_software">Open source software</string>
    <string name="sweet_software_that_helped_us">Sweet software that helped us</string>
</resources>