<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="?attr/bottomSheetActivityColorBg">

    <TextView
        android:id="@+id/tv_edit_profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/edit_profile"
        android:textColor="?attr/actionBarTextColor"
        android:textSize="22sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_activity_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="-20dp"
            android:elevation="0dp"
            android:minHeight="300dp"
            app:cardBackgroundColor="?attr/bottomSheetActivityCardColorBg">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/profile_pic_placeholder"
                    app:civ_border_color="?attr/primaryText"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/tv_pick_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_profile_image"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center"
                    android:text="@string/pick_a_photo"
                    android:textColor="?attr/colorGrey"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edit_profile_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_pick_image"
                    android:layout_marginTop="16dp"
                    android:hint="@string/username"
                    android:textColorHint="?attr/colorGrey"
                    app:helperText="Help people discover your account by choosing a username you're known by. You can change this later but it uniques to an account"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="?attr/colorGrey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="?attr/primaryText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edit_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_edit_profile_username"
                    android:layout_marginTop="16dp"
                    android:hint="@string/full_name"
                    android:textColorHint="?attr/colorGrey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="?attr/primaryText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edit_profile_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_edit_profile_name"
                    android:layout_marginTop="16dp"
                    android:hint="@string/about_you"
                    android:textColorHint="?attr/colorGrey"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:counterOverflowTextColor="@android:color/holo_red_light"
                    app:counterTextColor="?attr/colorGrey">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:textColor="?attr/primaryText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_edit_profile_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_edit_profile_bio"
                    android:layout_marginTop="16dp"
                    android:hint="@string/gender"
                    android:textColorHint="?attr/colorGrey"
                    app:boxBackgroundColor="?attr/bottomSheetActivityCardColorBg"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="?attr/primaryText"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_edit_profile_gender"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_bg_theme_based"
                    android:text="Save"
                    android:textColor="?attr/bottomSheetActivityCardColorBg"
                    android:textAllCaps="false"/>

            </RelativeLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
</RelativeLayout>